--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "netlify-cli": "^12.1.0"
+    "netlify-cli": "^12.1.0",
+    "prettier": "3.0.3"
   }
 }
